Simple fix for Deprecated for Nette >= 2.4
Function add() in \Nette\Utils\Html is deprecated in Nette 2.4
and will be removed in Nette 3.0.
This fix uses function addHtml() instead.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vojtys/typeahead",
+    "name": "imasys/typeahead",
     "description": "Typeahead (twitter/typeahead.js) for Nette - Forms",
     "type": "library",
     "license": ["BSD-3-Clause"],
@@ -7,6 +7,9 @@
     "authors": [
         {
             "name": "Vojtěch Sedláček"
+        },
+        {
+            "name": "Imasys s.r.o."
         }
     ],
     "suggest": {
